# KiroHacks

./: .gitignore  LICENSE  WRITEUP.md  WRITEUP_RESPONSES.md  benchmark.py  benchmark_config.yaml  benchmark_flask.py  cli.py  demo.py  start.md
.context-lens/: index.db
.kiro/: memory.md
.kiro/hooks/: auto-reindex-on-save.kiro.hook  commit-helper.kiro.hook  memory-consolidator.kiro.hook  miser-reindex-on-delete.kiro.hook  miser-reindex-on-save.kiro.hook  test-after-task.kiro.hook
.kiro/settings/: mcp.json
.kiro/steering/: caveman-integration.md  token-miser.md  token-miser.md.disabled
.token-miser/: index.db
benchmark/: README.md  __init__.py  __main__.py  _addon_template.py  auto_prompter.py  automation_driver.py  cli.py  config.py  models.py  orchestrator.py  proxy.py  reporter.py  requirements.txt  session_script.py
context-lens/: POWER.md  README.md  lens  mcp.json  pyproject.toml
context-lens/.context-lens/: index.db
context-lens/hooks/: lens-reindex-on-delete.kiro.hook  lens-reindex-on-save.kiro.hook
context-lens/src/: __init__.py  cli.py  mcp_server.py
context-lens/src/indexer/: __init__.py  core.py  models.py  parser_python.py  parser_treesitter.py  scanner.py
context-lens/src/query/: __init__.py  selector.py  smart.py  tree_view.py
context-lens/steering/: context-lens.md
example_project/: ISSUES.md  app.py  database.py
example_project/.context-lens/: index.db
example_project/.token-miser/: index.db
example_project/models/: __init__.py  task.py  user.py
example_project/routes/: auth.py  tasks.py  users.py
example_project/tests/: test_auth.py  test_tasks.py
example_project/utils/: pagination.py  validators.py
flask_project/: ERROR_LOG.md  ISSUES.md  test_async_bug.py
flask_project/src/flask/: app.py
tests/: __init__.py  test_benchmark_models.py  test_config.py  test_integration.py  test_models.py  test_orchestrator.py  test_proxy.py  test_reporter.py  test_session_script.py  test_token_miser_selection.py
token-miser/: POWER.md  README.md  codex-mcp.toml  mcp.json  miser  pyproject.toml  requirements.txt
token-miser/src/: cli.py  mcp_server.py
token-miser/src/indexer/: core.py  edge_builder.py  parser_python.py  parser_regex.py  parser_routes.py  scanner.py
token-miser/src/query/: expander.py  formatter.py  selector.py  smart.py  tree_view.py
token-miser/src/storage/: db.py
token-miser/steering/: token-miser.md
(+9 files in other folders)
