[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "token-miser"
version = "2.0.0"
description = "Smart context selection for coding agents — index once, query fast"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["llm", "context", "indexing", "code", "mcp", "tokens"]
dependencies = ["mcp>=1.0.0"]

[project.optional-dependencies]
treesitter = ["tree-sitter-languages>=1.10.0"]

[project.scripts]
miser = "src.cli:main"
miser-mcp = "src.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
